@@ -9,14 +9,17 @@ echo.
 set error=0
 
 rem JAVA_HOME not defined
-if "%JAVA_HOME%" == "" goto noJava
+if "%JAVA_HOME%" == "" goto trySystemJava
 
 rem JAVA_HOME defined incorrectly
 if not exist "%JAVA_HOME%\bin\java.exe" goto badJava
 
+rem Setup the java command and move on
+set RUN_JAVA=%JAVA_HOME%\bin\java
 echo JAVA_HOME: %JAVA_HOME%
 echo.
 
+:checkGeoServerHome
 rem GEOSERVER_HOME not defined
 if "%GEOSERVER_HOME%" == "" goto noHome
 
@@ -25,8 +28,25 @@ if not exist "%GEOSERVER_HOME%\bin\startup.bat" goto badHome
 
 goto checkDataDir
 
+:trySystemJava
+  echo The JAVA_HOME environment variable is not defined, trying to use System Java
+for /f %%i in ('where java') do set RUN_JAVA=%%i
+rem --- we might be on amd64 having only x86 jre installed ---
+if "%RUN_JAVA%"=="" if DEFINED ProgramFiles(x86) if NOT "%PROCESSOR_ARCHITECTURE%"=="x86" (
+    rem --- restart the batch in x86 mode---
+    echo Warning: No java interpreter found in path.
+    echo Retry using Wow64 filesystem [32bit environment] redirection.
+    %SystemRoot%\SysWOW64\cmd.exe /c %0 %*
+    exit /b %ERRORLEVEL%
+  )
+if "%RUN_JAVA%"=="" goto noJava
+  echo Using System Java at:
+  echo    %RUN_JAVA%
+  echo.
+goto checkGeoServerHome
+
 :noJava
-  echo The JAVA_HOME environment variable is not defined.
+  echo The JAVA_HOME environment variable is not defined, and no Java executable could be found.
 goto JavaFail
 
 :badJava
@@ -34,16 +54,13 @@ goto JavaFail
 goto JavaFail
 
 :JavaFail
-  echo This environment variable is needed to run this program.
-  echo.
-  echo Set this environment variable via the following command:
+  echo Please install Java or, if present but not in the path, set this environment variable via the following command:
   echo    set JAVA_HOME=[path to Java]
   echo Example:
-  echo    set JAVA_HOME=C:\Program Files\Java\jdk6
+  echo    set JAVA_HOME=C:\Program Files\Java\jdk8
   echo.
   set error=1
 goto end
-
 
 :noHome
   if exist ..\start.jar goto noHomeOK
@@ -87,7 +104,7 @@ goto checkDataDir
 :checkDataDir
   rem GEOSERVER_DATA_DIR not defined
   if "%GEOSERVER_DATA_DIR%" == "" goto noDataDir
-  goto run
+  goto setMarlinRenderer
 
 :noDataDir
   rem if GEOSERVER_DATA_DIR is not defined then use GEOSERVER_HOME/data_dir/
@@ -109,16 +126,24 @@ goto end
   echo Temporarily setting GEOSERVER_DATA_DIR to the following directory:
   echo %GEOSERVER_DATA_DIR%
   echo.
+goto setMarlinRenderer
+
+:setMarlinRenderer
+  cd "%GEOSERVER_HOME%"
+  for /f "delims=" %%i in ('dir /b/s "%GEOSERVER_HOME%\webapps\geoserver\WEB-INF\lib\marlin*.jar"') do set MARLIN_JAR=%%i
+  if "%MARLIN_JAR%" == "" (
+    echo Marlin renderer jar not found
+    goto run
+  )
+  set MARLIN_ENABLER=-Xbootclasspath/a:"%MARLIN_JAR%" -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine
+  set JAVA_OPTS=%JAVA_OPTS% %MARLIN_ENABLER%
 goto run
 
-
 :run
-  if "%JAVA_OPTS%" == "" (set JAVA_OPTS=-XX:MaxPermSize=128m)
-  set RUN_JAVA=%JAVA_HOME%\bin\java
-  cd %GEOSERVER_HOME%
+  cd "%GEOSERVER_HOME%"
   echo Please wait while loading GeoServer...
   echo.
-  "%RUN_JAVA%" "%JAVA_OPTS%" -DGEOSERVER_DATA_DIR="%GEOSERVER_DATA_DIR%" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar
+  "%RUN_JAVA%" %JAVA_OPTS% -DGEOSERVER_DATA_DIR="%GEOSERVER_DATA_DIR%" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar
   cd bin
 goto end
 
